--- a/src/components/Main/HomeScreen/HomeScreen.css
+++ b/src/components/Main/HomeScreen/HomeScreen.css
@@ -3,7 +3,7 @@
 	height:100%;
 	position:relative;
 	background-color:var(--bla3);
-	background-image: url('https://firebasestorage.googleapis.com/v0/b/notnik-app.appspot.com/o/assets%2Fchristmas-dark.png?alt=media&token=366d39a3-46c2-4c9a-bed9-a141cc3a0cd8');
+	background-image: url('./assets/christmas-dark.png');
 	background-repeat: repeat;
 	background-size: 15em;
 	background-position: auto;
