--- a/src/components/Main/Splash/Splash.css
+++ b/src/components/Main/Splash/Splash.css
@@ -3,7 +3,7 @@
   position: relative;
   background: var(--bla3);
   display: grid;
-  background-image: url("https://firebasestorage.googleapis.com/v0/b/notnik-app.appspot.com/o/assets%2FNotnik-bg-splash.jpg?alt=media&token=6b6e10ac-5fec-4e5d-950f-b05b30f30be9");
+  background-image: url("./assets/notnik_splash.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
