Fall back to fetching images from server instead (Issues building app on Heroku)

--- a/src/components/Main/Entry/Entry.css
+++ b/src/components/Main/Entry/Entry.css
@@ -84,7 +84,7 @@
   width: 0.9em;
   height: 0.9em;
   opacity: 0.1;
-  background-image: url("./assets/icons/delete.svg");
+  background-image: url("https://firebasestorage.googleapis.com/v0/b/notnik-app.appspot.com/o/assets%2Fassets%2Fdelete.svg?alt=media&token=3bf9d70e-623a-4313-9659-b48f716c214b");
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
