--- a/src/components/Main/HomeScreen/HomeScreen.css
+++ b/src/components/Main/HomeScreen/HomeScreen.css
@@ -3,7 +3,7 @@
 	height:100%;
 	position:relative;
 	background-color:var(--bla3);
-	background-image: url('./assets/christmas-dark.png');
+	background-image: url('https://firebasestorage.googleapis.com/v0/b/notnik-app.appspot.com/o/assets%2Fassets%2Fchristmas-dark.png?alt=media&token=a486b41d-2c05-4870-b106-f995564773cf');
 	background-repeat: repeat;
 	background-size: 15em;
 	background-position: auto;
