--- a/src/components/Main/Splash/Splash.css
+++ b/src/components/Main/Splash/Splash.css
@@ -3,7 +3,7 @@
   position: relative;
   background: var(--bla3);
   display: grid;
-  background-image: url("./assets/notnik_splash.jpg");
+  background-image: url("https://firebasestorage.googleapis.com/v0/b/notnik-app.appspot.com/o/assets%2Fassets%2Fnotnik_splash.jpg?alt=media&token=5146c138-bdfa-4778-9fa8-af4f2cc485a8");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
