--- a/src/components/Main/FullEntry/Head/Head.css
+++ b/src/components/Main/FullEntry/Head/Head.css
@@ -62,7 +62,7 @@
 	border:1px solid var(--w);
 	cursor: pointer;
 	transition:0.3s box-shadow;
-	background-image: url('./assets/icons/new.svg');
+	background-image: url('https://firebasestorage.googleapis.com/v0/b/notnik-app.appspot.com/o/assets%2Fassets%2Fnew.svg?alt=media&token=f1c1c746-ce48-401c-8989-89384bd93984');
 	background-size:100%;
 	background-position: center;
 	background-repeat: no-repeat;
