--- a/src/components/Menu/Menu.css
+++ b/src/components/Menu/Menu.css
@@ -29,7 +29,7 @@
 }
 
 .Menu .Menu__Btn:nth-child(2) {
-  background-image: url("./assets/icons/new.svg");
+  background-image: url("https://firebasestorage.googleapis.com/v0/b/notnik-app.appspot.com/o/assets%2Fassets%2Fnew.svg?alt=media&token=f1c1c746-ce48-401c-8989-89384bd93984");
 }
 
 .Menu .Menu__Btn:nth-child(2):after {
@@ -37,7 +37,7 @@
 }
 
 .Menu .Menu__Btn:nth-child(3) {
-  background-image: url("./assets/icons/list.svg");
+  background-image: url("https://firebasestorage.googleapis.com/v0/b/notnik-app.appspot.com/o/assets%2Fassets%2Flist.svg?alt=media&token=84e8753c-55be-457e-a4d9-9be59bedaef7");
 }
 
 .Menu .Menu__Btn:nth-child(3):after {
@@ -45,7 +45,7 @@
 }
 
 .Menu .Menu__Btn:nth-child(4) {
-  background-image: url("./assets/icons/save.svg");
+  background-image: url("https://firebasestorage.googleapis.com/v0/b/notnik-app.appspot.com/o/assets%2Fassets%2Fsave.svg?alt=media&token=901779ed-cdb2-41cb-9ef3-58e18b09d1c3");
 }
 
 .Menu .Menu__Btn:nth-child(4):after {
@@ -53,7 +53,7 @@
 }
 
 .Menu .Menu__Btn:nth-child(6) {
-  background-image: url("./assets/icons/settings.svg");
+  background-image: url("https://firebasestorage.googleapis.com/v0/b/notnik-app.appspot.com/o/assets%2Fassets%2Fsettings.svg?alt=media&token=57553547-52da-4e18-9ffc-30306cdfe8a8");
 }
 
 .Menu .Menu__Btn:nth-child(6):after {
