--- a/src/components/Main/Auth/Auth.css
+++ b/src/components/Main/Auth/Auth.css
@@ -114,6 +114,7 @@
 .Auth__Container__Bottom {
   position: absolute;
   height: 5em;
+  width:100%;
   bottom:0;
   display: flex;
   align-items: center;
@@ -122,7 +123,7 @@
 }
 
 .Auth__Container__Popup {
-  width: 20em;
+  width: auto;
   height: auto;
   position: relative;
   display: flex;
@@ -161,16 +162,5 @@
 @media (max-width: 480px) {
   .Auth .Auth__Container {
     width: 75vw;
-  }
-}
-
-@media (min-width: 1025px) {
-  .Auth__Container__Bottom {
-    width:100%;
-  }
-}
-@media (max-width: 1025px) {
-  .Auth__Container__Bottom {
-    width:calc(100% - 3em);
   }
 }
