--- a/src/components/Main/FullEntry/Head/Head.css
+++ b/src/components/Main/FullEntry/Head/Head.css
@@ -1,87 +1,107 @@
 .Entry__Head {
-	position: relative;
-	width:100%;
-	height:100%;
-	background-color:var(--bla1);
-	background-position: center;
-	background-size: cover;
-	background-repeat: no-repeat;
+  position: relative;
+  width: 100%;
+  height: 100%;
+  background-color: var(--bla1);
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
 .Entry__Head .Input__Title {
-	position: absolute;
-	font-family: 'Baloo', cursive;
-	font-size: 3.5em;
-	line-height:0em;
-	color: var(--w);
-	margin-top:0.5em;
-	outline: none;
-	width:100%;
-	margin-left: 0.5em;
-	z-index: 9999;
+  position: absolute;
+  font-family: "Baloo", cursive;
+
+  line-height: 0em;
+  color: var(--w);
+  margin-top: 0.5em;
+  outline: none;
+  width: 100%;
+  margin-left: 0.5em;
+  z-index: 9999;
 }
 
 .Entry__Head__Date__Container {
-	position: absolute;
-	top:7em;
-	margin-left: 2em;
-	z-index: 9999;
+  position: absolute;
+  top: 7em;
+  margin-left: 2em;
+  z-index: 9999;
 }
 
 .Entry__Head__Date__Container .Input__Date {
-	font-family: 'Montserrat', sans-serif;
-	line-height: 1em;
-	font-size: 0.8em;
-	color: var(--or2);
+  font-family: "Montserrat", sans-serif;
+  line-height: 1em;
+  font-size: 0.8em;
+  color: var(--or2);
 }
 
 .Entry__Head__Date__Container span {
-	line-height: 0em;
-	color: var(--w);
-	margin:0 0.2em;
+  line-height: 0em;
+  color: var(--w);
+  margin: 0 0.2em;
 }
 
 .Entry__Head__Date__Container .Input__Date:nth-child(1) {
-	width:2rem;
+  width: 2rem;
 }
 
 .Entry__Head__Date__Container .Input__Date:nth-child(3),
 .Entry__Head__Date__Container .Input__Date:nth-child(5) {
-	width:1.3rem;
+  width: 1.3rem;
 }
 
 .Entry__Head__Date__Container .Input__Date:nth-child(7) {
-	width:2rem;
+  width: 2rem;
 }
 
 .Entry__Head .Input__Img {
-	position: absolute;
-	width:1.1em;
-	height:1.1em;
-	background-color: transparent;
-	border:1px solid var(--w);
-	cursor: pointer;
-	transition:0.3s box-shadow;
-	background-image: url('https://firebasestorage.googleapis.com/v0/b/notnik-app.appspot.com/o/assets%2Fassets%2Fnew.svg?alt=media&token=f1c1c746-ce48-401c-8989-89384bd93984');
-	background-size:100%;
-	background-position: center;
-	background-repeat: no-repeat;
-	top:1em;
-	right:1em;
-	z-index: 9999;
+  position: absolute;
+  width: 1.1em;
+  height: 1.1em;
+  background-color: transparent;
+  border: 1px solid var(--w);
+  cursor: pointer;
+  transition: 0.3s box-shadow;
+  background-image: url("https://firebasestorage.googleapis.com/v0/b/notnik-app.appspot.com/o/assets%2Fassets%2Fnew.svg?alt=media&token=f1c1c746-ce48-401c-8989-89384bd93984");
+  background-size: 100%;
+  background-position: center;
+  background-repeat: no-repeat;
+  top: 1em;
+  right: 1em;
+  z-index: 9999;
 }
 
 .Entry__Head .Input__Img:hover {
-	box-shadow:0 0 13px -1px rgba(255, 255, 255, 1);
+  box-shadow: 0 0 13px -1px rgba(255, 255, 255, 1);
 }
 
 .Entry__Head:after {
-	content:'';
-	position: absolute;
-	width: 100%;
-	height: 100%;
-	top: 0;
-	left: 0;
-	background-color: #000;
-	opacity: 0.5;
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background-color: #000;
+  opacity: 0.5;
+}
+
+@media (min-width: 1025px) {
+  .Entry__Head .Input__Title {
+    font-size: 3.5em;
+  }
+  .Entry__Head__Date__Container {
+    top: 7em;
+    margin-left: 2em;
+  }
+}
+
+@media (max-width: 1025px) {
+  .Entry__Head .Input__Title {
+    font-size: 2.5em;
+  }
+  .Entry__Head__Date__Container {
+    top: 5em;
+    margin-left: 1.4em;
+  }
 }
