--- a/src/components/Main/Entry/Entry.css
+++ b/src/components/Main/Entry/Entry.css
@@ -52,6 +52,7 @@
   font-size: 1.2em;
   line-height: 0em;
   outline: none;
+  white-space: nowrap;
 }
 
 .Entry__Info h3 {
@@ -98,10 +99,27 @@
   .Entry {
     width: 30em;
   }
+  .Entry__Info h2 {
+    font-size: 1.2em;
+  }
+  .Entry__Text {
+    width: 23em;
+    font-size: 0.7em;
+    line-height: 1em;
+  }
 }
 
 @media (max-width: 1025px) {
   .Entry {
     width: 62vw;
+    min-width: 26em;
+  }
+  .Entry__Info h2 {
+    font-size: 0.9rem;
+  }
+  .Entry__Text {
+    width: 19em;
+    font-size: 0.6em;
+    line-height: 1.2em;
   }
 }
