--- a/src/components/Main/HomeEntries/HomeEntires.css
+++ b/src/components/Main/HomeEntries/HomeEntires.css
@@ -46,7 +46,10 @@
     overflow-y: hidden;
     overflow-x: scroll;
     grid-auto-flow: column;
-	}
+  }
+  .List::-webkit-scrollbar {
+    width: 1em;
+  }
 }
 
 @media (max-width: 1025px) {
@@ -56,5 +59,8 @@
     overflow-y: scroll;
     overflow-x: hidden;
     grid-auto-flow: row;
-	}
+  }
+  .List::-webkit-scrollbar {
+    width: 0em;
+  }
 }
