Fix width of entry preview text

--- a/src/components/Main/Entry/Entry.css
+++ b/src/components/Main/Entry/Entry.css
@@ -118,7 +118,7 @@
     font-size: 0.9rem;
   }
   .Entry__Text {
-    width: 19em;
+    width: 95%;
     font-size: 0.6em;
     line-height: 1.2em;
   }
