--- a/src/components/Main/Settings/ResetPassword/ResetPassword.css
+++ b/src/components/Main/Settings/ResetPassword/ResetPassword.css
@@ -92,3 +92,15 @@
   background-color: transparent;
   color: var(--w);
 }
+
+@media (min-width: 1025px) {
+  .Form__Heading h2 {
+    font-size: 1.2rem;
+  }
+}
+
+@media (max-width: 1025px) {
+  .Form__Heading h2 {
+    font-size: 1rem;
+  }
+}
