--- a/src/components/Main/HomeEntries/HomeEntires.css
+++ b/src/components/Main/HomeEntries/HomeEntires.css
@@ -46,6 +46,8 @@
     overflow-y: hidden;
     overflow-x: scroll;
     grid-auto-flow: column;
+    grid-row-gap: 1em;
+    margin: 2em;
   }
   .List::-webkit-scrollbar {
     width: 1em;
@@ -54,11 +56,13 @@
 
 @media (max-width: 1025px) {
 	.List {
+    margin: 1.2em;
     width: calc(100% - 5em);
     grid-template-columns: 1fr;
     overflow-y: scroll;
     overflow-x: hidden;
     grid-auto-flow: row;
+    grid-row-gap: 1em;
   }
   .List::-webkit-scrollbar {
     width: 0em;
