--- a/src/client/styles/index.scss
+++ b/src/client/styles/index.scss
@@ -1,2 +1,13 @@
 @import "variables";
-@import "reset";
+
+body {
+    margin: 0;
+    padding: 0;
+    background-color: $bla1;
+}
+
+h2,
+p {
+    margin-block-start: 0;
+    margin-block-end: 0;
+}
