--- a/src/client/styles/_variables.scss
+++ b/src/client/styles/_variables.scss
@@ -4,7 +4,8 @@ $bla1: #222220;
 $bla2: #353531;
 $bla3: #2c2c2a;
 $bla4: #464643;
-$rd: #ec4e20;
+$err: #ec4e20;
+$rd: #2176ae;
 $g: #3fc577;
 $blu: #00a6ed;
 $or: #ff9505;
