--- a/src/client/styles/index.scss
+++ b/src/client/styles/index.scss
@@ -11,3 +11,12 @@ p {
     margin-block-start: 0;
     margin-block-end: 0;
 }
+
+.fade-enter-active,
+.fade-leave-active {
+    transition: opacity 0.3s;
+}
+.fade-enter,
+.fade-leave-to {
+    opacity: 0;
+}
