--- a/src/client/styles/_variables.scss
+++ b/src/client/styles/_variables.scss
@@ -1,14 +1,23 @@
-@import url("https://fonts.googleapis.com/css?family=Baloo|Montserrat:400,700&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Baloo");
+@import url("https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300&display=swap");
 
 $bla1: #222220;
 $bla2: #353531;
 $bla3: #2c2c2a;
 $bla4: #464643;
+
+$w: #f9f9f9;
+$w2: #c7c7c7;
+$w3: #8a8a8a;
+$w4: #757575;
+
 $err: #ec4e20;
 $rd: #2176ae;
 $g: #3fc577;
 $blu: #00a6ed;
 $or: #ff9505;
 $or2: #ffb627;
-$w: #f9f9f9;
-$w2: #b2b2b2;
+
+$primary: "Source Sans Pro", sans-serif;
+$code: "Roboto Mono", Monaco, courier, monospace;
