--- a/src/client/styles/_markdown.scss
+++ b/src/client/styles/_markdown.scss
@@ -62,7 +62,7 @@
             background-color: $bla3;
             padding: 0em;
             margin: 0;
-            color: $w2;
+            color: $w;
         }
     }
     code {
@@ -72,6 +72,28 @@
         margin: 0 0.2em;
         color: $or;
         border-radius: 0.3em;
+    }
+    .language-javascript {
+        .function {
+            color: $or;
+        }
+        .parameter {
+            color: $rd;
+        }
+        .string {
+            color: $g;
+        }
+    }
+    pre.language-javascript {
+        position: relative;
+        &:after {
+            content: "JS";
+            position: absolute;
+            right: 1.5em;
+            top: 1.5em;
+            font-family: $primary;
+            font-size: 0.8rem;
+        }
     }
     // END CODE
 
