--- a/src/client/styles/index.scss
+++ b/src/client/styles/index.scss
@@ -2,6 +2,11 @@
 @import "codemirror";
 @import "markdown";
 
+::selection {
+    background-color: transparent;
+    color: $rd;
+}
+
 body {
     margin: 0;
     padding: 0;
