Add standard scss config

--- a/src/client/styles/_markdown.scss
+++ b/src/client/styles/_markdown.scss
@@ -1,3 +1,5 @@
+/* stylelint-disable */
+
 .full-entry__markdown-wrapper {
     font-family: $primary;
     padding-bottom: 20em;
@@ -152,5 +154,4 @@
             }
         }
     }
-    // END LISTS
 }
