@import instead of @use

--- a/src/client/styles/index.scss
+++ b/src/client/styles/index.scss
@@ -1,7 +1,7 @@
-@use "fonts";
-@use "variables";
-@use "codemirror";
-@use "markdown";
+@import "fonts";
+@import "variables";
+@import "codemirror";
+@import "markdown";
 
 ::selection {
   background-color: transparent;
