--- a/src/client/styles/_variables.scss
+++ b/src/client/styles/_variables.scss
@@ -1,3 +1,15 @@
+// FONTS
+
+@import url("https://fonts.googleapis.com/css?family=Baloo");
+@import url("https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300&display=swap");
+
+$secondary: "Baloo", cursive;
+$primary: "Source Sans Pro", sans-serif;
+$code: "Roboto Mono", monaco, courier, monospace;
+
+// COLORS
+
 $bla1: #222220;
 $bla2: #353531;
 $bla3: #2c2c2a;
@@ -12,10 +24,19 @@ $g: #3fc577;
 $blu: #00a6ed;
 $or: #ff9505;
 $or2: #ffb627;
-$primary: "Source Sans Pro", sans-serif;
-$code: "Roboto Mono", monaco, courier, monospace;
+
+// RESOLUTIONS
+
 $md: 768px;
 $lg: 1024px;
 $xlg: 1280px;
 $xl: 1440px;
 $xl2: 1920px;
+
+// UTILS
+
+$border-radius: 0.5em;
+$navbar: (
+    sm: 2em,
+    md: 3em,
+);
