--- a/src/client/styles/index.scss
+++ b/src/client/styles/index.scss
@@ -1,31 +1,7 @@
-@import "fonts";
 @import "variables";
-@import "codemirror";
-@import "markdown";
-
-::selection {
-    background-color: transparent;
-    color: $rd;
-}
-
-body {
-    margin: 0;
-    padding: 0;
-    background-color: $bla1;
-}
-
-h2,
-p {
-    margin-block-start: 0;
-    margin-block-end: 0;
-}
-
-.fade-enter-active,
-.fade-leave-active {
-    transition: opacity 0.3s;
-}
-
-.fade-enter,
-.fade-leave-to {
-    opacity: 0;
-}
+@import "reset";
+@import "mixins";
+@import "layout";
+@import "external";
+@import "components";
+@import "sections";
