--- a/src/client/styles/_layout.scss
+++ b/src/client/styles/_layout.scss
@@ -6,6 +6,7 @@
     grid-template-columns: map.get($navbar, sm) 1fr;
     width: 100%;
     height: 100vh;
+
     @media (min-width: $md) {
         grid-template-columns: map.get($navbar, md) 1fr;
     }
@@ -14,6 +15,6 @@
 .frontpage {
     height: 100%;
     background-color: $bla1;
-    background-image: radial-gradient($bla4 0.9px, $bla1 0.9px);
+    background-image: radial-gradient($bla4 .9px, $bla1 .9px);
     background-size: 18px 18px;
 }
