--- a/src/client/styles/placeholders/_button.scss
+++ b/src/client/styles/placeholders/_button.scss
@@ -7,13 +7,15 @@
     box-sizing: border-box;
     color: $w;
     font-family: $primary;
-    padding: 0.8em;
-    font-size: 0.6rem;
+    padding: .8em;
+    font-size: .6rem;
     cursor: pointer;
+
     @media (min-width: $md) {
         padding: 1em;
-        font-size: 0.9rem;
+        font-size: .9rem;
     }
+
     &:hover,
     &:focus,
     &.is-active {
