--- a/src/client/styles/sections/_frontpage.scss
+++ b/src/client/styles/sections/_frontpage.scss
@@ -8,6 +8,7 @@
     grid-template-columns: map.get($navbar, sm) 1fr;
     width: 100%;
     height: 100vh;
+
     @media (min-width: $md) {
         grid-template-columns: map.get($navbar, md) 1fr;
     }
@@ -16,8 +17,9 @@
 .frontpage {
     @include flex-center;
     background-color: $bla1;
-    background-image: radial-gradient($bla4 0.9px, $bla1 0.9px);
+    background-image: radial-gradient($bla4 .9px, $bla1 .9px);
     background-size: 18px 18px;
+
     &__auth-panel {
         position: relative;
         height: 16em;
@@ -25,6 +27,7 @@
         background-color: $bla3;
         box-shadow: 0 0 50px 0 $bla1;
         border-radius: $border-radius;
+
         @media (min-width: $md) {
             width: 25em;
             height: 30em;
@@ -42,58 +45,75 @@
     display: flex;
     flex-direction: column;
     color: $w;
+
     &__heading {
+        display: flex;
+        gap: 1em;
+    }
+
+    &__title {
         font-size: 1.2em;
         font-family: $secondary;
+
         @media (min-width: $md) {
             font-size: 2.5em;
         }
     }
+
     &__container {
         display: flex;
         flex-direction: column;
     }
+
     &__input {
         height: 2em;
         margin-top: 1.5em;
         background-color: transparent;
         border: none;
-        border-bottom: 1px solid $w;
+        border-bottom: 1px solid $w3;
         color: $w2;
         font-family: $primary;
         box-sizing: border-box;
-        font-size: 0.6rem;
+        font-size: .6rem;
+
         @media (min-width: $md) {
             height: 3em;
             font-size: 1rem;
         }
+
         &:focus {
             outline: none;
             border-bottom: 1px solid $rd;
         }
     }
+
     &__input-container {
         display: flex;
         gap: 1.5em;
+
         #{$root}__input {
             width: 50%;
         }
     }
+
     &__submit {
         @extend %button;
         margin-right: auto;
         margin-top: 3em;
     }
+
     &__link {
         position: absolute;
         bottom: $form-padding;
         font-family: $primary;
-        font-size: 0.6em;
+        font-size: .6em;
         font-weight: 400;
         cursor: pointer;
+
         @media (min-width: $md) {
-            font-size: 0.9em;
+            font-size: .9em;
         }
+
         &--accent {
             color: $rd;
         }
@@ -109,16 +129,13 @@
     border-radius: $border-radius;
     box-shadow: 0 0 10px 0 $err;
     box-sizing: border-box;
-    padding: 1.5em;
+    padding: 1.7em;
     color: $w;
-    font-size: 0.9rem;
+    font-size: .9rem;
     font-family: $primary;
-    &__header,
+
     &__subheader {
         display: block;
         white-space: nowrap;
-    }
-    &__header {
-        margin-bottom: 0.5em;
     }
 }
