--- a/src/client/styles/_variables.scss
+++ b/src/client/styles/_variables.scss
@@ -35,7 +35,11 @@ $xl2: 1920px;
 
 // UTILS
 
-$border-radius: .5em;
+$border-radius: 0.5em;
+$submenu: (
+    sm: 17em,
+    md: 17em,
+);
 $navbar: (
     sm: 2em,
     md: 3em,
