--- a/src/client/styles/sections/_grid.scss
+++ b/src/client/styles/sections/_grid.scss
@@ -91,8 +91,34 @@
     background-color: $bla3;
     height: 100%;
     width: map.get($submenu, md);
+    box-shadow: 0 0 10px -8px $bla1;
 
     @media (min-width: $md) {
         left: map.get($navbar, md);
+    }
+
+    &__list-item {
+        list-style: none;
+        color: $w2;
+        height: 2.5em;
+        display: flex;
+        align-items: center;
+        padding-left: 1em;
+        box-sizing: border-box;
+        border-top: 1px solid $bla4;
+        border-bottom: 1px solid $bla4;
+        font-size: 0.8rem;
+        font-family: $code;
+        cursor: pointer;
+        position: relative;
+
+        &:hover {
+            background: $bla2;
+        }
+
+        &:focus,
+        &:active {
+            background: $bla3;
+        }
     }
 }
