--- a/src/client/styles/sections/_note-edit.scss
+++ b/src/client/styles/sections/_note-edit.scss
@@ -5,17 +5,12 @@
 }
 
 .full-entry {
-    position: absolute;
-    width: calc(100% - 2em);
-    height: calc(100vh - 1.5em);
-    right: 0;
-    top: 0;
+    width: 100%;
+    height: 100%;
+    position: relative;
     box-sizing: border-box;
-    display: grid;
-    grid-template-rows: 11em 1fr;
     background-color: $bla2;
     overflow-x: hidden;
-    padding: 1em;
 
     &__wrapper {
         position: relative;
@@ -29,50 +24,5 @@
     &__codemirror-wrapper {
         width: 100%;
         max-width: 100%;
-    }
-
-    @media (min-width: $md) {
-        width: calc(100% - 3em);
-    }
-
-    @media screen and (min-width: 900px) {
-        padding: 6em;
-    }
-
-    @media screen and (min-width: 1200px) {
-        padding: 9em;
-    }
-
-    @media screen and (min-width: 1400px) {
-        padding: 9em 12em;
-    }
-
-    @media screen and (min-width: 1800px) {
-        padding: 9em 20em;
-    }
-
-    @media screen and (min-width: 2200px) {
-        padding: 9em 25em;
-    }
-
-    &::-webkit-scrollbar {
-        height: 1em;
-        width: 1em;
-    }
-
-    &::-webkit-scrollbar-track {
-        background: $bla1;
-    }
-
-    &::-webkit-scrollbar-thumb {
-        background: $bla3;
-    }
-
-    &::-webkit-scrollbar-thumb:hover {
-        background: $bla4;
-    }
-
-    &::-webkit-scrollbar-thumb:active {
-        background: $bla2;
     }
 }
