create editor navbars

--- a/src/client/styles/_variables.scss
+++ b/src/client/styles/_variables.scss
@@ -10,6 +10,7 @@ $code: "Roboto Mono", monaco, courier, monospace;
 
 // COLORS
 
+$bla0: #1b1b1a;
 $bla1: #222220;
 $bla2: #353531;
 $bla3: #2c2c2a;
