--- a/src/client/styles/sections/_editor.scss
+++ b/src/client/styles/sections/_editor.scss
@@ -18,4 +18,12 @@
         display: flex;
         align-items: center;
     }
+
+    &__markdown {
+        font-family: $primary;
+        flex-basis: 100%;
+        padding: 2em;
+        box-sizing: border-box;
+        overflow-y: scroll;
+    }
 }
