--- a/src/client/styles/sections/_editor.scss
+++ b/src/client/styles/sections/_editor.scss
@@ -14,9 +14,10 @@
 
     &__nav {
         background-color: $bla2;
-        height: 3em;
+        min-height: 3em;
         display: flex;
         align-items: center;
+        flex-wrap: wrap;
     }
 
     &__markdown {
@@ -25,5 +26,23 @@
         padding: 2em;
         box-sizing: border-box;
         overflow-y: scroll;
+    }
+
+    &__button {
+        background: $bla1;
+        color: $w3;
+        border: none;
+        height: 100%;
+        width: auto;
+        min-width: 3em;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        cursor: pointer;
+        margin-right: 1em;
+
+        &:hover {
+            color: $w;
+        }
     }
 }
