change default quill styles

--- a/src/client/styles/_quill.scss
+++ b/src/client/styles/_quill.scss
@@ -17,3 +17,7 @@
     background-color: $w2 !important;
     color: $bla1 !important;
 }
+
+.ql-picker-label.ql-active {
+    color: $or2 !important;
+}
