add buttons to quill toolbar

--- a/src/client/styles/sections/_editor.scss
+++ b/src/client/styles/sections/_editor.scss
@@ -45,4 +45,9 @@
             color: $w;
         }
     }
+
+    &__main .ql-container {
+        /* stylelint-disable-next-line declaration-no-important */
+        border: none !important;
+    }
 }
