add svg icons to button buttons

--- a/src/client/styles/_variables.scss
+++ b/src/client/styles/_variables.scss
@@ -36,6 +36,8 @@ $xl2: 1920px;
 
 // UTILS
 
+$editor-background-color: $bla2;
+$editor-tools-background-color: $bla1;
 $border-radius: 0.5em;
 $submenu: (
     sm: 17em,
