--- a/src/client/styles/sections/_editor.scss
+++ b/src/client/styles/sections/_editor.scss
@@ -2,7 +2,7 @@
 @use "@/styles/variables" as *;
 
 .editor {
-    background-color: $bla4;
+    background-color: $editor-background-color;
     box-sizing: border-box;
     color: $w;
     position: relative;
@@ -13,11 +13,12 @@
     justify-content: space-between;
 
     &__nav {
-        background-color: $bla2;
+        background-color: $editor-tools-background-color;
         min-height: 3em;
         display: flex;
         align-items: center;
         flex-wrap: wrap;
+        box-shadow: 0 6px 40px 1px $bla3;
     }
 
     &__markdown {
@@ -26,10 +27,23 @@
         padding: 2em;
         box-sizing: border-box;
         overflow-y: scroll;
+
+        &::-webkit-scrollbar {
+            width: 1em;
+        }
+
+        &::-webkit-scrollbar-track {
+            box-shadow: inset 0 0 6px $bla1;
+        }
+
+        &::-webkit-scrollbar-thumb {
+            background-color: $editor-tools-background-color;
+            outline: 1px solid $editor-tools-background-color;
+        }
     }
 
     &__button {
-        background: $bla1;
+        background: $editor-tools-background-color;
         color: $w3;
         border: none;
         height: 100%;
@@ -39,7 +53,21 @@
         align-items: center;
         justify-content: center;
         cursor: pointer;
-        margin-right: 1em;
+
+        &--save,
+        &--delete {
+            background-position: 50% 60%;
+            background-repeat: no-repeat;
+            background-size: 55%;
+        }
+
+        &--save {
+            background-image: url("@/assets/save.svg");
+        }
+
+        &--delete {
+            background-image: url("@/assets/delete.svg");
+        }
 
         &:hover {
             color: $w;
