--- a/src/client/styles/sections/_editor.scss
+++ b/src/client/styles/sections/_editor.scss
@@ -52,7 +52,13 @@
         display: flex;
         align-items: center;
         justify-content: center;
-        cursor: pointer;
+        cursor: not-allowed;
+        opacity: 0.3;
+
+        &--active {
+            opacity: 1;
+            cursor: pointer;
+        }
 
         &--save,
         &--delete {
