style quill link popup

--- a/src/client/styles/_quill.scss
+++ b/src/client/styles/_quill.scss
@@ -1,6 +1,10 @@
 /* stylelint-disable declaration-no-important */
 @use "@/styles/variables";
 
+.ql-editor {
+    font-family: $primary;
+}
+
 .ql-stroke {
     stroke: $w2 !important;
 }
@@ -24,4 +28,25 @@
 
 .ql-toolbar {
     border: none !important;
+}
+
+.ql-picker-item {
+    .ql-stroke {
+        stroke: $bla1 !important;
+    }
+}
+
+.ql-tooltip {
+    background-color: $bla1 !important;
+    color: $w2 !important;
+    box-shadow: 0 0 5px $bla1 !important;
+    border: 1px solid $bla1 !important;
+
+    input {
+        background-color: $w2 !important;
+    }
+}
+
+.ql-action {
+    color: $or !important;
 }
