--- a/src/client/styles/placeholders/_button.scss
+++ b/src/client/styles/placeholders/_button.scss
@@ -1,4 +1,4 @@
-@use '@/styles/variables' as *;
+@use "@/styles/variables" as *;
 
 %button {
     background-color: transparent;
@@ -7,13 +7,13 @@
     box-sizing: border-box;
     color: $w;
     font-family: $primary;
-    padding: .8em;
-    font-size: .6rem;
+    padding: 0.8em;
+    font-size: 0.7rem;
     cursor: pointer;
 
     @media (min-width: $md) {
         padding: 1em;
-        font-size: .9rem;
+        font-size: 0.9rem;
     }
 
     &:hover,
