--- a/src/client/styles/_variables.scss
+++ b/src/client/styles/_variables.scss
@@ -40,7 +40,7 @@ $editor-background-color: $bla2;
 $editor-tools-background-color: $bla1;
 $border-radius: 0.5em;
 $submenu: (
-    sm: 17em,
+    sm: 100vw,
     md: 17em,
 );
 $navbar: (
