--- a/src/client/styles/_layout.scss
+++ b/src/client/styles/_layout.scss
@@ -23,18 +23,19 @@
     height: 100%;
     background-color: $bla3;
     display: grid;
-    grid-template-columns: map.get($submenu, sm) 1fr;
+    grid-template-columns: 0 1fr;
     overflow: hidden;
-
-    &__grid {
-        height: 100%;
-        display: grid;
-        grid-template-rows: repeat(auto-fill, 10em);
-        grid-template-columns: repeat(auto-fill, 10em);
-    }
 
     .editor {
         height: 100%;
         grid-column: 2;
+    }
+
+    &.is-active {
+        grid-template-columns: map.get($submenu, sm) 1fr;
+
+        @media (min-width: $md) {
+            grid-template-columns: map.get($submenu, md) 1fr;
+        }
     }
 }
