highlight active note

--- a/src/client/styles/sections/_submenu.scss
+++ b/src/client/styles/sections/_submenu.scss
@@ -35,5 +35,10 @@
         &:active {
             background: $bla3;
         }
+
+        &.is-active {
+            background-color: $rd;
+            color: $w;
+        }
     }
 }
